# unit_test

./: .gitignore  CMakeLists.txt  README.md  calc.cpp  calc.hpp  calculator.py  main  main.cpp  test_calc.cpp  test_calcolatrice.py
.github/workflows/: test.yaml
pkg_test/: CMakeLists.txt
pkg_test/include/pkg_test/: pub.hpp
pkg_test/pkg_test/: sub_node.py
pkg_test/src/: main_pub.cpp  main_sub.cpp  sub.cpp
ws_ros2/src/pkg_test/: package.xml
ws_ros2/src/pkg_test/include/pkg_test/: sub.hpp
ws_ros2/src/pkg_test/src/: pub.cpp
ws_ros2/src/pkg_test/test/: test_pub_sub.cpp  test_sub_node.py
